crates/cribo/tests/snapshots/execution_results@xfail_file_deduplication_symlinks.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_file_deduplication_symlinks/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "helpers location: lib/helpers.py\ncommon location: lib/helpers.py\nhelpers counter: 1\ncommon counter: 2",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 139, in <module>",
}
