crates/cribo/tests/snapshots/requirements@bundle_third_party_bare_dist_info.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_bare_dist_info/main.py
---
packages:
  - hidden-dep>=1
count: 1
