crates/cribo/tests/snapshots/requirements@bundle_third_party_dunder_string_data.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_dunder_string_data/main.py
---
packages: []
count: 0
